# crafters-toolkit

backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 081a207f5e72_create_items_and_recipes_tables.py
backend/src/crafters_toolkit/: main.py
backend/src/crafters_toolkit/api/routers/: items.py  recipes.py
backend/src/crafters_toolkit/core/: config.py  logging.py
backend/src/crafters_toolkit/db/: __init__.py  session.py
backend/src/crafters_toolkit/models/: __init__.py  models.py
backend/src/crafters_toolkit/schemas/: __init__.py  schemas.py
